- The IMLibUI.valueChange method is locked with the id attribute value to prevent the error when multiple
  updating processes run simultaneously.
- Supporting jQuery File Upload. Check the file Samples/Sample_website/fileupload_jQuery_MySQL.html.
- Reduce error messages when the mbstring extension is disabled.
- Add .eslintrc.js.
- [BUG FIX] addCondition method's third was eliminated, the matching feature is activated anytime.
  So when the 3rd parameter is nothing, the matching follows the value of
  INTERMediator_DBAdapter.eliminateDuplicatedConditions.
- [BUG FIX] Fix the issue of MediaAccess class and the file upload component when using the Native
  Authentication for mobile devices. The affected version is 5.3 only.
- [BUG FIX] INTERMediatorOnPage.defaultBackgroundImage affects as expected.
- [BUG FIX] String array value for single value operator works fine.
- [BUG FIX] Modify the value of INTERMediatorOnPage.getIMRootPath on Windows Server.
- [BUG FIX] Update FX.php to fix compatibility with authentication for FileMaker Server.
- [BUG FIX] Enrolment methods had a bug in case of FileMaker Server with issuedhash for SQLite.
- [BUG FIX] When the text field bond to local context didn't update calculated property.
- [BUG FIX] Authentication prevented in case of just specify on the second parameter of IM_Entry.
- [BUG FIX] Fix DB_FileMaker_FX class not to throw an exception when failed to convert a value 
  using DataConverter classes.
- [BUG FIX] Fix showing a portal record when using portal access mode for FileMaker Server and a 
  count of related records on the portal object is 1 (Thanks to Kiyonori Ito).

Ver.5.3 (February 21, 2016)
- Support OAuth2 with OAuthAuth.php class and the sample redirected page is OAuthCatcher.php
  in the Auth_Support directory.
- Master/Detail style UI (controlled by 'navi-control' key) support mobile environment ex. JQuery Mobile.
  The Samples/Sample_Mobile folder includes some demos for mobile device.